[gd_scene load_steps=2 format=3 uid="uid://bwet1kdg2v1di"]

[ext_resource type="Script" uid="uid://caw38q4t00sve" path="res://scenes/power_handler/power_handler.gd" id="1_71aku"]

[node name="PowerHandler" type="GridContainer"]
mouse_filter = 0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 6
script = ExtResource("1_71aku")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
